# FPGA-Based-HOOFR-Front-End

./: CMakeLists.txt  README.md  hoofr.cl  host.cpp
include/: Pattern_Lookup.h  host.h
